    rename user script			New
    reset on zero vc			New
    svcctl list 			Renamed from 'enable svcctl'


Changes since 3.0.21rc2
-----------------------

commits
-------
o   Jeremy Allison <jra@samba.org>
    * Correctly handle the LDAP_UNWILLING_TO_PERFORM error from 
      eDirectory when accessing the universal password.
    * Fix deadlock condition in share mode locking code.


o   Gerald (Jerry) Carter <jerry@samba.org>
    * Initialize the local group description.
    * Disable WINS and NetLogon services in the MMC services
      plugin when the associated smb.conf features are not enabled.
    * Add checks for invalid characters in new share names on the 
      srvsvc pipe.


o   Guenther Deschner <gd@samba.org>
    * Uninitialized warnings fixes.
    * Fix return value in client spooler code.


o   Krishna Ganugapati <krishnag@centeris.com>
    * Use the subtree delete ldap control when running 'net ads 
      leave'.


o   Volker Lendecke <vl@samba.org>
    * Fix some uninitialized variable warnings.
    * Fix winbind_lookup_name for the local domain, 


o   Derrell Lipman <derrell@samba.org>
    * Libsmbclient memory & file descriptor leak fixes.
    * Fix crash bug in libsmbclient.
    * Add long share name support to libsmbclient when enumerating shares.
    


o   Brian Moran <bmoran@centeris.com>
    * Fix segv in eventlogadm when not event logs are listed in 
      smb.conf.


o   Lars Müller <lmuelle@samba.org>
    * Ensure setmntent() returns with != NULL in the disk_quotas() 
      Linux version.
    * Add configure switch to disable libmsrpc build.
    * Add a soname to libmsrpc.


o   John Terpstra <jht@samba.org>
    * Add 'net idmap' usage help text.



Changes since 3.0.20b
---------------------

o   Jeremy Allison <jra@samba.org>
    * BUG 1828: Fixed SPNEGO issues with PocketPC clients.
    * Added 'map readonly' parameter.
    * BUG 3166: Fix crash in libsmbclient if the $HOME environment is
      not defined.